--- a/index.html
+++ b/index.html
@@ -4,28 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy new year</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
     <header>
-      <div>
-        <h3 class="happy">Happy New Year</h3>
-        <h2 class="party">New Year Party Celebration</h2>
-      </div>
-      <div class="header content">
-        
-      </div>
-
+      <section>
+        <div class="container">
+          <div class="b1">
+            <h3 class="happy">Happy New Year</h3>
+            <h2 class="party">New Year Party Celebration</h2>
+          </div>
+        </div>
+      </section>
     </header>
     <main>
+      <section>
+        <div class="b2">
+          <h1 class="parcent">65% OFF</h1>
+          <h5 class="holiday">OUR HOLIDAY DEALS ARE BETTER</h5>
+          <h3 class="all">ALL CATEGORIES</h3>
+          <div class="box">
+            <img class="victor" src="resources/New Year Photo.png" alt="" />
+          </div>
+        </div>
+      </section>
 
+      <section>
+        <div class="b3 container">
+          <div class="party">
+            <h1>Welcome to midnight party</h1>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+          </div>
+          <img class="ok" src="resources/Group 70.png" alt="" />
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
