--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
         </div>
       </section>
     </header>
+
     <main>
       <section>
         <div class="b2">
           <h1 class="parcent">65% OFF</h1>
           <h5 class="holiday">OUR HOLIDAY DEALS ARE BETTER</h5>
           <h3 class="all">ALL CATEGORIES</h3>
-          <div class="box">
+          <div class="image">
             <img class="victor" src="resources/New Year Photo.png" alt="" />
           </div>
         </div>
@@ -39,14 +40,27 @@
       <section>
         <div class="b3 container">
           <div class="party">
-            <h1>Welcome to midnight party</h1>
+            <h3>Welcome to midnight party</h3>
             <p>
               Dolor sit amet consectetur. Consequat eget consectetur maecenas
               sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
               vel euismod.
             </p>
+            <button class="join">Join Now</button>
           </div>
-          <img class="ok" src="resources/Group 70.png" alt="" />
+          <img class="images" src="resources/Group 70.png" alt="" />
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <p class="banner">
+            Place: New Park Hotel <br>
+            Date: 31 December Night 2023 <br>
+            Time: Evening
+            7.30 pm to 12.30 am
+          </p>
+          <button class="btn">JOIN NOW</button>
         </div>
       </section>
     </main>
