--- a/index.html
+++ b/index.html
@@ -55,14 +55,46 @@
       <section>
         <div class="container">
           <p class="banner">
-            Place: New Park Hotel <br>
-            Date: 31 December Night 2023 <br>
-            Time: Evening
+            <span class="spn">Place:</span> New Park Hotel <br>
+            <span class="spn">Date:</span> 31 December Night 2023 <br>
+            <span class="spn">Time:</span>Evening
             7.30 pm to 12.30 am
           </p>
           <button class="btn">JOIN NOW</button>
         </div>
       </section>
+
+       <section>
+          <div class="container">
+            <h4 class="heading">THE BEST GIFTS</h4>
+            <h2 class="our">Our Awesome Portfolio</h2>
+            <p class="para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+          </div>
+          <div class="row1 container">
+            <div>
+            <img src="resources/Rectangle 3.png" alt="">
+            </div>
+            <div>
+              <img src="resources/Rectangle 4.png" alt="">
+            </div>
+            <div>
+              <img src="resources/Rectangle 5.png" alt="">
+            </div>
+          </div>
+
+          <div class="row2 container">
+            <div>
+              <img src="resources/Rectangle 6.png" alt="">
+            </div>
+            <div>
+              <img src="resources/Rectangle 7.png" alt="">
+            </div>
+            <div>
+              <img src="resources/Rectangle 8.png" alt="">
+            </div>
+          </div>
+       </section>
+
     </main>
     <footer></footer>
   </body>
