upper subscribe added

--- a/index.html
+++ b/index.html
@@ -92,8 +92,23 @@
             <div>
               <img src="resources/Rectangle 8.png" alt="">
             </div>
-          </div>
+          </div>  
        </section>
+       
+       <section>
+        <div class="sub container">
+           <div>
+            <img class="email"src="resources/Group 61.png" alt="">
+           </div>
+           <div>
+            <h3 class="sub container">Subscribe Newsletter</h3>
+            <p class="sit container">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+            </p>
+           </div>
+        </div>
+       </section>
+       
 
     </main>
     <footer></footer>
