image problem solved

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h5 class="holiday">OUR HOLIDAY DEALS ARE BETTER</h5>
           <h3 class="all">ALL CATEGORIES</h3>
           <div class="image">
-            <img class="victor" src="resources/New Year Photo.png" alt="" />
+            <img class="victor" src="images/New Year Photo.png" alt="" />
           </div>
         </div>
       </section>
@@ -48,69 +48,91 @@
             </p>
             <button class="join">Join Now</button>
           </div>
-          <img class="images" src="resources/Group 70.png" alt="" />
+          <img class="images" src="images/Group 70.png" alt="" />
         </div>
       </section>
 
       <section>
         <div class="container">
           <p class="banner">
-            <span class="spn">Place:</span> New Park Hotel <br>
-            <span class="spn">Date:</span> 31 December Night 2023 <br>
-            <span class="spn">Time:</span>Evening
-            7.30 pm to 12.30 am
+            <span class="spn">Place:</span> New Park Hotel <br />
+            <span class="spn">Date:</span> 31 December Night 2023 <br />
+            <span class="spn">Time:</span>Evening 7.30 pm to 12.30 am
           </p>
           <button class="btn">JOIN NOW</button>
         </div>
       </section>
 
-       <section>
-          <div class="container">
-            <h4 class="heading">THE BEST GIFTS</h4>
-            <h2 class="our">Our Awesome Portfolio</h2>
-            <p class="para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+      <section>
+        <div class="container">
+          <h4 class="heading">THE BEST GIFTS</h4>
+          <h2 class="our">Our Awesome Portfolio</h2>
+          <p class="para">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="row1 container">
+          <div>
+            <img src="images/Rectangle 3.png" alt="" />
           </div>
-          <div class="row1 container">
-            <div>
-            <img src="resources/Rectangle 3.png" alt="">
-            </div>
-            <div>
-              <img src="resources/Rectangle 4.png" alt="">
-            </div>
-            <div>
-              <img src="resources/Rectangle 5.png" alt="">
-            </div>
+          <div>
+            <img src="images/Rectangle 4.png" alt="" />
           </div>
+          <div>
+            <img src="images/Rectangle 5.png" alt="" />
+          </div>
+        </div>
 
-          <div class="row2 container">
-            <div>
-              <img src="resources/Rectangle 6.png" alt="">
-            </div>
-            <div>
-              <img src="resources/Rectangle 7.png" alt="">
-            </div>
-            <div>
-              <img src="resources/Rectangle 8.png" alt="">
-            </div>
-          </div>  
-       </section>
-       
-       <section>
+        <div class="row2 container">
+          <div>
+            <img src="images/Rectangle 6.png" alt="" />
+          </div>
+          <div>
+            <img src="images/Rectangle 7.png" alt="" />
+          </div>
+          <div>
+            <img src="images/Rectangle 8.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- <section>
         <div class="sub container">
            <div>
-            <img class="email"src="resources/Group 61.png" alt="">
+            <img class="email"src="images/Group 61.png" alt="">
            </div>
            <div>
-            <h3 class="sub container">Subscribe Newsletter</h3>
+            <h3 class="newsleter container">Subscribe Newsletter</h3>
             <p class="sit container">
               Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
             </p>
            </div>
-        </div>
-       </section>
-       
+        </div> -->
 
+      <section id="newsletter">
+        <div class="container newsletter-main">
+          <div>
+            <h3 class="letter container">Subscribe Newsletter</h3>
+            <p class="sit">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+          </div>
+          <div>
+            <img id="email1" src="images/Group 61.png" alt="">
+           </div>
+          <form>
+            <input type="email" name="" id="" />
+            <button class="button-red">Subscribe</button>
+          </form>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
   </body>
 </html>
