--- a/index.html
+++ b/index.html
@@ -125,13 +125,18 @@
             <img id="email1" src="images/Group 61.png" alt="">
            </div>
           <form>
-            <input type="email" name="" id="" />
+            <input placeholder="user@gmail.com" type="email" name="" id="" />
             <button class="button-red">Subscribe</button>
           </form>
         </div>
       </section>
     </main>
     <footer>
+      <div class="box1">
+        <div class="rec">
+           
+        </div>
+      </div>
 
     </footer>
   </body>
