--- a/index.html
+++ b/index.html
@@ -132,11 +132,20 @@
       </section>
     </main>
     <footer>
-      <div class="box1">
-        <div class="rec">
-           
+      <section>
+        <div class="footer">
+        <div class="footer-column">
+          <p>44, Big Building Roosevelt Street
+            Beach Gardens Florida 33410</p>
+        </div>
+        <div class="footer-column">
+            <p>+00 123 584 124</p>
+            <p>www.website.com</p>
         </div>
       </div>
+        <hr>
+
+      </section>
 
     </footer>
   </body>
