--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             </p>
           </div>
           <div>
-            <img id="email1" src="images/Group 61.png" alt="">
-           </div>
+            <img id="email1" src="images/Group 61.png" alt="" />
+          </div>
           <form>
             <input placeholder="user@gmail.com" type="email" name="" id="" />
             <button class="button-red">Subscribe</button>
@@ -132,21 +132,30 @@
       </section>
     </main>
     <footer>
-      <section>
-        <div class="footer">
-        <div class="footer-column">
-          <p>44, Big Building Roosevelt Street
-            Beach Gardens Florida 33410</p>
+      <div class="footer container">
+        <div class="upper-footer">
+            <div>
+            <h3 class="color">44, Big Building Roosevelt Street
+              Beach Gardens Florida 33410</h3>
+            </div>
+            <div class="color">
+              <h3>+00 123 584 124</h3>
+              <h3>www.website.com</h3>
+            </div>
         </div>
-        <div class="footer-column">
-            <p>+00 123 584 124</p>
-            <p>www.website.com</p>
+        <hr>
+        <div class="middle-footer">
+           <img src="images/Facebook.png" alt="">
+            <img src="images/Instagram.png" alt="">
+            <img src="images/Twitter.png" alt="">
+            <img src="images/Linkedin.png" alt="">
+        </div>
+        <hr>
+        <div class="lower-footer color">
+          <h3>2017, All Rights Reserved.</h3>
+          <h3>Unsubscribe</h3>
         </div>
       </div>
-        <hr>
-
-      </section>
-
     </footer>
   </body>
 </html>
