--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <script src="https://kit.fontawesome.com/52f9da71fe.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -97,20 +98,6 @@
           </div>
         </div>
       </section>
-
-      <!-- <section>
-        <div class="sub container">
-           <div>
-            <img class="email"src="images/Group 61.png" alt="">
-           </div>
-           <div>
-            <h3 class="newsleter container">Subscribe Newsletter</h3>
-            <p class="sit container">
-              Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
-            </p>
-           </div>
-        </div> -->
-
       <section id="newsletter">
         <div class="container newsletter-main">
           <div>
@@ -139,8 +126,8 @@
               Beach Gardens Florida 33410</h3>
             </div>
             <div class="color">
-              <h3>+00 123 584 124</h3>
-              <h3>www.website.com</h3>
+              <h3><i class="fa-solid fa-phone-volume"></i> +00 123 584 124</h3>
+              <h3><i class="fa-solid fa-globe"></i>www.website.com</h3>
             </div>
         </div>
         <hr>
